# Anonymizer

./: .gitignore  FileNavigation.txt  README.md  config.yaml  data.json  main.py  output.json  pyproject.toml  schema.py  test_anonymiser.py  test_main.py
basicapp/: apiroutes.py
functions/: anonymiser.py  synthesiser.py
outputs/: output.json
sm/: main.py
sm/functions/: synthesiser.py
src/sm/: config.yaml  main(old).py  main.py
src/sm/UTILS/: UTILS_anon.py  UTILS_funcs.py  UTILS_models.py  UTILS_synth.py
src/sm/functions/: anonymiser.py  pre_made_data.py  synthesiser.py
src/sm/tools/: app_anon.py  app_models.py  app_synth.py  helper_funcs.py  model_funcs.py  regex_builder.py  regex_sre_constants.py  regex_sre_parse.py
tests/: config.yaml  data.json  schema.py  test_anonymiser.py  test_main.py  test_synthesiser.py
